[package]
name = "wincolor"
version = "1.0.1"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
A simple Windows specific API for controlling text color in a Windows console.
"""
documentation = "https://docs.rs/wincolor"
homepage = "https://github.com/BurntSushi/termcolor/tree/master/wincolor"
repository = "https://github.com/BurntSushi/termcolor/tree/master/wincolor"
readme = "README.md"
keywords = ["windows", "win", "color", "ansi", "console"]
license = "Unlicense/MIT"

[lib]
name = "wincolor"
bench = false

[dependencies]
std = { version = "1.0.0", optional = true, package = 'rustc-test-workspace-std' }

[features]
rustc-dep-of-test = ['std']
